# mmd

./: .gitignore  animator.js  dev.bat  index.html  main.js  mikapo.html  mikapo.js  package.json  style.css  viewer.html  viewer.js  vite.config.js
electron/: main.cjs  preload.cjs
plug/MMD-MPL-with-facial-expressions/MMD-MPL/: Cargo.toml
plug/MMD-MPL-with-facial-expressions/MMD-MPL/src/: animation.rs  bone.rs  compiler.rs  lib.rs  main.rs  morph.rs  mpl.rs  pose.rs  utils.rs  vmd.rs  vpd.rs
plug/MMD-MPL-with-facial-expressions/MMD-MPL/vmd/: output.vmd
plug/MMD-MPL-with-facial-expressions/MMD-MPL/vpd/: 1.vpd  x.vpd
plug/MMD-MPL-with-facial-expressions/MMD-MPL/web/: .gitignore  next.config.ts  package.json
plug/MMD-MPL-with-facial-expressions/MMD-MPL/web/src/app/: layout.tsx
plug/MMD-MPL-with-facial-expressions/MMD-MPL/web/src/components/: code-editor.tsx  main-scene.tsx  mpl-input.tsx
plug/MMD-MPL-with-facial-expressions/MMD-MPL/web/src/components/ui/: command.tsx  slider.tsx
plug/MMD-MPL-with-facial-expressions/MMD-MPL/web/src/hooks/: useMPLCompiler.ts
src/core/: aiPrompt.js  avatarCore.js  babylonToThree.js  behaviorEngine.js  boneMatcher.js  boneVisualizer.js  breathingSystem.js  constraintEngine.js  delayBuffer.js  faceBlendshapeSolver.js  ikSolver.js  intentParser.js  kfmConverter.js  llmProtocol.js  mikapoSolver.js  mmdAdapter.js  motionBlender.js  motionGenerator.js  motionLibrary.js  motionPlanner.js  motionScriptEngine.js  motionSystem.js  motionTrajectory.js  motorLayerSystem.js  mplCompiler.js  mplGenerator.js  mplPipeline.js  mplSolver.js  (+8 more)
(+7 files in other folders)
