[package]
name = "mmd-mpl"
version = "0.3.6"
edition = "2021"
license = "GPL-3.0"
description = "MPL is a rule-based Domain-Specific Language for creating MMD poses and animations using natural semantic syntax"
repository = "https://github.com/AmyangXYZ/MMD-MPL"
exclude = ["web/"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
encoding_rs = "0.8.35"
clap = { version = "4.4", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mpl"
path = "src/main.rs"